--- a/package.json
+++ b/package.json
@@ -1,20 +1,11 @@
 {
-  "name": "books-webstie",
+  "name": "loginform",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "book.js",
   "scripts": {
-    "start":"nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.20.1",
-    "express": "^4.18.2",
-    "express.js": "^1.0.0",
-    "firebase": "^9.16.0",
-    "knex": "^2.4.2",
-    "nodemon": "^2.0.20",
-    "pg": "^8.9.0"
-  }
+  "license": "ISC"
 }
